--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Better Google Tasks Client</title>
+    <title>Better Google Tasks</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet" />
     <link href="https://unpkg.com/sanitize.css/forms.css" rel="stylesheet" />
     <link href="https://unpkg.com/sanitize.css/assets.css" rel="stylesheet" />
@@ -12,6 +13,7 @@
       href="https://unpkg.com/sanitize.css/typography.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Hello, World!</h1>
