--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,6 +16,203 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <button id="authorize_button" onclick="handleAuthClick()">
+              Authorize for Google
+            </button>
+          </li>
+          <li>
+            <button id="signout_button" onclick="handleSignoutClick()">
+              Sign Out
+            </button>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <pre id="content" style="white-space: pre-wrap"></pre>
+    </main>
+    <script type="text/javascript">
+      /* exported gapiLoaded */
+      /* exported gisLoaded */
+      /* exported handleAuthClick */
+      /* exported handleSignoutClick */
+
+      const CLIENT_ID =
+        "525106867093-5m993o7l023n8a8uu2qcvn0v6hi6nkk8.apps.googleusercontent.com";
+      const API_KEY = "AIzaSyDsnC2zHNjHq-rZjgALAGqlYUwZzm5SmT0";
+
+      // Discovery doc URL for APIs used by the quickstart
+      const DISCOVERY_DOC =
+        "https://www.googleapis.com/discovery/v1/apis/tasks/v1/rest";
+
+      // Authorization scopes required by the API; multiple scopes can be
+      // included, separated by spaces.
+      const SCOPES = "https://www.googleapis.com/auth/tasks.readonly";
+
+      let tokenClient;
+      let gapiInited = false;
+      let gisInited = false;
+
+      document.getElementById("authorize_button").style.visibility = "hidden";
+      document.getElementById("signout_button").style.visibility = "hidden";
+
+      /**
+       * Callback after api.js is loaded.
+       */
+      function gapiLoaded() {
+        gapi.load("client", initializeGapiClient);
+      }
+
+      /**
+       * Callback after the API client is loaded. Loads the
+       * discovery doc to initialize the API.
+       */
+      async function initializeGapiClient() {
+        await gapi.client.init({
+          apiKey: API_KEY,
+          discoveryDocs: [DISCOVERY_DOC],
+        });
+        gapiInited = true;
+        maybeEnableButtons();
+      }
+
+      /**
+       * Callback after Google Identity Services are loaded.
+       */
+      function gisLoaded() {
+        tokenClient = google.accounts.oauth2.initTokenClient({
+          client_id: CLIENT_ID,
+          scope: SCOPES,
+          callback: "", // defined later
+        });
+        gisInited = true;
+        maybeEnableButtons();
+      }
+
+      /**
+       * Enables user interaction after all libraries are loaded.
+       */
+      function maybeEnableButtons() {
+        if (gapiInited && gisInited) {
+          document.getElementById("authorize_button").style.visibility =
+            "visible";
+        }
+      }
+
+      /**
+       *  Sign in the user upon button click.
+       */
+      function handleAuthClick() {
+        tokenClient.callback = async (resp) => {
+          if (resp.error !== undefined) {
+            throw resp;
+          }
+          document.getElementById("signout_button").style.visibility =
+            "visible";
+          document.getElementById("authorize_button").innerText = "Refresh";
+          let taskLists = await fetchTaskLists();
+          // await fetchTasks(taskLists);
+        };
+
+        if (gapi.client.getToken() === null) {
+          // Prompt the user to select a Google Account and ask for consent to share their data
+          // when establishing a new session.
+          tokenClient.requestAccessToken({ prompt: "consent" });
+        } else {
+          // Skip display of account chooser and consent dialog for an existing session.
+          tokenClient.requestAccessToken({ prompt: "" });
+        }
+      }
+
+      /**
+       *  Sign out the user upon button click.
+       */
+      function handleSignoutClick() {
+        const token = gapi.client.getToken();
+        if (token !== null) {
+          google.accounts.oauth2.revoke(token.access_token);
+          gapi.client.setToken("");
+          document.getElementById("content").innerText = "";
+          document.getElementById("authorize_button").innerText = "Authorize";
+          document.getElementById("signout_button").style.visibility = "hidden";
+        }
+      }
+
+      /**
+       * Print task lists.
+       */
+      async function fetchTaskLists() {
+        let response;
+        try {
+          response = await gapi.client.tasks.tasklists.list({
+            maxResults: 10,
+          });
+        } catch (err) {
+          document.getElementById("content").innerText = err.message;
+          return;
+        }
+        const taskLists = response.result.items;
+        if (!taskLists || taskLists.length == 0) {
+          document.getElementById("content").innerText = "No task lists found.";
+          return;
+        }
+        // Flatten to string to display
+        let output = taskLists.reduce(
+          (str, taskList) => `${str}<li>${taskList.title}</li>`,
+          ""
+        );
+        output = `<h2>Task lists</h2><ul>${output}</ul>`;
+        document.getElementById("content").innerHTML = output;
+
+        return taskLists;
+      }
+
+      async function fetchTasks(taskLists) {
+        let responses = [];
+        try {
+          for (const taskList of taskLists) {
+            responses.push(
+              await gapi.client.tasks.tasks.list({
+                tasklist: taskList.id,
+              })
+            );
+          }
+        } catch (err) {
+          document.getElementById("content").innerText = err.message;
+          return;
+        }
+
+        for (const response of responses) {
+          const tasks = response.result.items;
+
+          if (!tasks || tasks.length == 0) {
+            document.getElementById("content").innerText = "No tasks found.";
+            return;
+          }
+          // Flatten to string to display
+          const output = tasks.reduce(
+            (str, task) => `${str}${task.title} (${task.id})\n`,
+            "Tasks:\n"
+          );
+          document.getElementById("content").innerText += output;
+        }
+      }
+    </script>
+    <script
+      async
+      defer
+      src="https://apis.google.com/js/api.js"
+      onload="gapiLoaded()"
+    ></script>
+    <script
+      async
+      defer
+      src="https://accounts.google.com/gsi/client"
+      onload="gisLoaded()"
+    ></script>
   </body>
 </html>
